bugfix wrong color

--- a/aetesis/public/css/aetesis.css
+++ b/aetesis/public/css/aetesis.css
@@ -987,7 +987,7 @@ a:hover, #search-results-container a:hover, a.product-title:hover, .r-item-info 
 }
 
 .card, .list-row {
-  background: #DAC4A0 !important;
+  background: var(--bg-light) !important;
   box-shadow: 0 0 0  currentColor, 0 2px 15px 1px rgba(21, 21, 21, 0.51);
   border-bottom: solid 1px var(--secondary) !important;
   border-radius: 3rem
